welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var cp:Int=0
do{
	for (cp <- 0 to 4) 
	{
	avance();
	if (estSurBiscuit)
	{
		cp=cp++;
	}
	}
	
	if (cp>=3 && croisement)
	{
		gauche();
	}

	if (cp<=2 && croisement)
	{
	droite();
	}
	cp=0;
}while(!croisement && !sortieTrouvee)

if (sortieTrouvee)
avance();